<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.udea.santiagoceron.lab1p23.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/darkblue"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_margin="10sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/user"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/user_h"
                android:inputType="textPersonName"
                android:textColor="@color/red"
                android:textColorHint="@color/limegreen"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_margin="10sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pass"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/pass_h"
                android:inputType="textPersonName"
                android:textColor="@color/red"
                android:textColorHint="@color/limegreen"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_margin="10sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pass"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ePass2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/pass2_h"
                android:inputType="textPersonName"
                android:textColor="@color/red"
                android:textColorHint="@color/limegreen"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="10sp"
                android:text="@string/email"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/email_h"
                android:inputType="textEmailAddress"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textColorHint="@color/limegreen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_margin="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sex"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sMale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <RadioButton
                    android:textColor="@color/black"
                    android:id="@+id/sFem"
                    android:checked="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/female"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/born"
                android:layout_margin="10sp"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/showDate"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <Button
                android:onClick="datePicker"
                android:id="@+id/picDate"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:text="@string/set_da"
                android:textSize="18sp"
                android:textAllCaps="false"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tHobbie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hobbies"
                android:textColor="@color/primary_text"
                android:layout_margin="10sp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/sMovie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/movies"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/sSport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sport"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/sRead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/read" />

            <CheckBox
                android:id="@+id/sDance"
                android:layout_width="0dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dance" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp">


            <Button
                android:id="@+id/bRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkorange"
                android:onClick="Register"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/show"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="25sp" />
    </LinearLayout>
</ScrollView>
